# sar_experiment

./: .gitattributes  .gitignore  .gitmodules  Build  Control_Playground--trial_24--NL.csv  Control_Playground--trial_24.csv  Exp_Control_Playground.py  LICENSE  Notes.txt  PlanePos_Update.py  README.md  requirements.txt  setup.cfg  setup.py
sar_logging_exp/: CMakeLists.txt  package.xml
sar_logging_exp/local_logs/: IM_B2_V0.0_A0_PA0_K0.0_T0_05_29-14:52.csv  IM_B2_V1.5_A30_PA0_K8.5_T1_05_29-15:18.csv  IM_B2_V1.5_A60_PA0_K8.5_T1_05_29-13:34.csv  IM_B2_V1.5_A75_PA0_K8.5_T2_05_29-13:52.csv  IM_B2_V1.5_A75_PA0_K85.0_T1_05_29-13:47.csv  IM_B2_V2.0_A30_PA0_K8.5_T1_05_29-15:16.csv  IM_B2_V2.0_A45_PA0_K8.5_T1_05_29-15:20.csv  IM_B2_V2.0_A60_PA0_K8.5_T1_05_29-13:29.csv  IM_B2_V2.0_A85_PA0_K8.5_T1_05_29-13:39.csv  IM_B2_V2.0_A85_PA0_K8.5_T2_05_29-13:43.csv  IM_B2_V2.3_A20_PA0_K8.5_T1_05_29-15:24.csv  IM_B2_V2.5_A30_PA0_K8.5_T1_05_29-15:13.csv  IM_B2_V2.5_A45_PA0_K8.5_T1_05_29-15:36.csv  IM_B2_V2.5_A60_PA0_K8.5_T1_05_29-13:22.csv  IM_B2_V2.7_A55_PA0_K8.5_T1_05_29-13:55.csv  IM_B2_V3.0_A30_PA0_K8.5_T1_05_29-15:10.csv  IM_B2_V3.0_A45_PA0_K8.5_T2_05_29-14:57.csv  IM_B2_V3.1_A40_PA0_K8.5_T1_05_29-15:00.csv  IM_B2_V3.2_A15_PA0_K8.5_T1_05_29-15:32.csv  IM_B2_V3.5_A25_PA0_K8.5_T1_05_29-15:27.csv  IM_B2_V4.0_A30_PA0_K8.5_T1_05_29-15:04.csv  SOV5_A1_V0.0_A0_K0.0_T0_05_01-10:18.csv  SOV5_A1_V0.0_A0_K0.0_T0_05_01-10:45.csv  SOV5_A1_V0.0_A0_K0.0_T0_05_01-10:50.csv  SOV5_A1_V1.0_A15_K0.0_T1_05_01-08:56.csv  SOV5_A1_V1.0_A45_K0.0_T1_05_01-09:26.csv  SOV5_A1_V1.0_A45_K0.0_T2_05_01-09:29.csv  (+19 more)
(+388 files in other folders)
