<?xml version="1.0"?>
<package format="2">
  <name>sar_logging_exp</name>
  <version>0.0.0</version>
  <description>The sar_logging_exp package</description>

  <maintainer email="bhabas@todo.todo">bhabas</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
